force-app/main/default/objects/Case/fields/Demo1__c.field-meta.xml
<CustomField>
    <fullName>Demo1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demo1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>