force-app/main/default/objects/Case/fields/Demo2__c.field-meta.xml
<CustomField>
    <fullName>Demo2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demo2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>