force-app/main/default/objects/Case/fields/demo_checkbox__c.field-meta.xml
<CustomField>
    <fullName>demo_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo checkbox</label>
    <type>Checkbox</type>
</CustomField>