force-app/main/default/objects/Case/fields/Demo_Formula__c.field-meta.xml
<CustomField>
    <fullName>Demo_Formula__c</fullName>
    <formula>CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Formula</label>
    <type>Text</type>
</CustomField>